--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,11 +15,15 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@elewa-website/elements/cards": ["libs/elements/cards/src/index.ts"],
       "@elewa-website/features/pages/about": [
         "libs/features/pages/about/src/index.ts"
       ],
       "@elewa-website/features/pages/home": [
         "libs/features/pages/home/src/index.ts"
+      ],
+      "@elewa-website/models/sections/projects": [
+        "libs/models/sections/projects/src/index.ts"
       ]
     }
   },
