--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "@angular/compiler-cli": "16.1.7",
     "@angular/language-service": "16.1.7",
     "@nguniversal/builders": "^16.1.1",
-    "@nrwl/cli": "14.8.8",
+    "@nrwl/cli": "^14.8.8",
     "@nrwl/cypress": "16.6.0",
     "@nrwl/eslint-plugin-nx": "16.6.0",
     "@nrwl/jest": "16.6.0",
     "@nrwl/linter": "16.6.0",
     "@nrwl/node": "^16.6.0",
+    "@nrwl/react": "^16.7.4",
     "@nrwl/workspace": "16.6.0",
     "@nx/jest": "16.6.0",
     "@nx/js": "16.6.0",
